# rust-stuweleipzig-mensa-crawler

./: .gitignore  Cargo.toml  README.md
src/: main.rs
