[package]
name = "stuparser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.14" }
scraper = "0.14.0"
selectors = "0.22.0"
tokio = { version = "1.24.2", features = ["rt-multi-thread", "macros"] }
chrono = "0.4.23"

[features]
benchmark = []