[package]
name = "stuparser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.14" }
scraper = "0.14.0"
selectors = "0.22.0"
tokio = { version = "1.24.2", features = ["full"] }
chrono = "0.4.23"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.92"
teloxide = "0.12.0"

[features]
benchmark = []

[profile.release]
lto = true
strip = true
codegen-units = 1
